--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
 body {
     margin: 0px;
+    font-size: 24pt;
+}
+button {
+    font-size: 18pt;
+}
+input {
+    font-size: 18pt;
 }
 table {
     border-collapse: collapse;
@@ -25,11 +32,11 @@ th, td {
 <div id="main"></div>
 <script>
 
-if (location.protocol.match(/^file/)) {
-    var buddhapongServer = 'http://localhost:8080'
-} else {
+// if (location.protocol.match(/^file/)) {
+//     var buddhapongServer = 'http://localhost:8080'
+// } else {
     var buddhapongServer = 'http://buddhapong-server-env-w434ankmsv.elasticbeanstalk.com'
-}
+// }
 
 var waitCount = 0
 
@@ -46,11 +53,11 @@ function main() {
     var size = getWindowSize()
 
     var chatHistory = $('<div style="box-sizing:border-box;border:1px solid black"/>')
-    chatHistory.setPos(0, 0, size[0], size[1]/2)
+    chatHistory.setPos(0, 0, size[0], size[1]/3)
     $('#main').append(chatHistory)
 
     var chatInput = $('<input type="text">')
-    chatInput.setPos(0, size[1]/2, size[0], 20)
+    chatInput.setPos(0, size[1]/3, size[0], 40)
     function onSend() {
         ws.send(_.json({ text : chatInput.val() }))
         chatInput.val('')
@@ -63,7 +70,7 @@ function main() {
     $('#main').append(chatInput)
 
     var sendButton = $('<button/>').html('send<br/><small>you can also press enter</small>')
-    sendButton.setPos(0, size[1]/2 + 20, 150, 40)
+    sendButton.setPos(0, size[1]/3 + 40, 200, 60)
     sendButton.click(onSend)
     $('#main').append(sendButton)
 
@@ -116,7 +123,7 @@ function main() {
         }))
         return d
     }
-    $('#main').append(drawPhoneNumberThing().setPos(0, size[1]*3/4, size[0], size[1]/4))
+    $('#main').append(drawPhoneNumberThing().setPos(0, size[1]*2/3, size[0], size[1]/3))
 }
 
 </script>
